--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bot"
   ],
   "author": "Slenky",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "discord.js": "^12.5.1"
   }
