--- a/package.json
+++ b/package.json
@@ -14,6 +14,24 @@
   "author": "Slenky",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "array-flatten": "^3.0.0",
+    "ascii-table": "0.0.9",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "common-tags": "^1.8.0",
+    "content-disposition": "^0.5.3",
+    "discord.js": "^12.5.1",
+    "express": "^4.17.1",
+    "express-json": "^1.0.0",
+    "finalhandler": "^1.1.2",
+    "gcommands": "^1.0.49",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "path-to-regexp": "^6.2.0",
+    "proxy-addr": "^2.0.6",
+    "quick.db": "^7.1.3",
+    "send": "^0.17.1",
+    "stack": "^0.1.0",
+    "utils-merge": "^1.0.1"
   }
 }
